# lemon-dd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Untitled Document  accessors.h  build.py  clangconfig.sh  dependencies.h  eval.h  example_input  expression.h  factories.h  functor_instance.h  iverson.h  main.cpp  optimizations.h  partial_eval.h  run_benchmark.sh  run_tests.sh
Test Functions/: .~lock.Result.ods#  Result.ods
Test Functions/Asterix/: asterix-2x2-cost.dot  asterix-2x2-effect-n.dot
benchmarkfiles/: max_level_10  max_level_12  max_level_14  max_level_16  max_level_18  max_level_2  max_level_20  max_level_3  max_level_4  max_level_6  max_level_8  result.csv
benchmarkfiles/Prost/: README  academic_advising_inst_mdp__1  academic_advising_inst_mdp__10  academic_advising_inst_mdp__2  academic_advising_inst_mdp__3  academic_advising_inst_mdp__4  academic_advising_inst_mdp__5  academic_advising_inst_mdp__6  academic_advising_inst_mdp__7  academic_advising_inst_mdp__8  academic_advising_inst_mdp__9  crossing_traffic_inst_mdp__1  crossing_traffic_inst_mdp__10  crossing_traffic_inst_mdp__4  crossing_traffic_inst_mdp__6  crossing_traffic_inst_mdp__8  elevators_inst_mdp__1  elevators_inst_mdp__10  elevators_inst_mdp__2  elevators_inst_mdp__4  elevators_inst_mdp__6  elevators_inst_mdp__7  elevators_inst_mdp__9  game_of_life_inst_mdp__1  game_of_life_inst_mdp__10  game_of_life_inst_mdp__4  game_of_life_inst_mdp__9  navigation_inst_mdp__1  navigation_inst_mdp__10  navigation_inst_mdp__2  navigation_inst_mdp__3  navigation_inst_mdp__4  navigation_inst_mdp__5  navigation_inst_mdp__6  navigation_inst_mdp__7  navigation_inst_mdp__8  navigation_inst_mdp__9  recon_inst_mdp__1  recon_inst_mdp__10  recon_inst_mdp__2  (+52 more)
benchmarkfiles/ast_functions/: README  max_level_12  max_level_6  max_level_8
benchmarkfiles/benchmark-condeff/: cond-eff-0_a1.res  cond-eff-1001_a1.res  cond-eff-1002_a1.res  cond-eff-1002_a2.res  cond-eff-1003_a1.res  cond-eff-1003_a2.res  cond-eff-1003_a3.res  cond-eff-1004_a1.res  cond-eff-1005_a1.res  cond-eff-1005_a2.res  cond-eff-1005_a3.res  cond-eff-1006_a1.res  cond-eff-1006_a2.res  cond-eff-1006_a3.res  cond-eff-1007_a1.res  cond-eff-1008_a1.res  cond-eff-1008_a2.res  cond-eff-1008_a3.res  cond-eff-1009_a1.res  cond-eff-100_a1.res  cond-eff-1010_a1.res  cond-eff-1010_a2.res  cond-eff-1010_a3.res  cond-eff-1011_a1.res  cond-eff-1011_a2.res  cond-eff-1011_a3.res  cond-eff-1012_a1.res  cond-eff-1013_a1.res  cond-eff-1013_a2.res  cond-eff-1013_a3.res  cond-eff-1014_a1.res  cond-eff-1015_a1.res  cond-eff-1016_a1.res  cond-eff-1017_a1.res  cond-eff-1018_a1.res  cond-eff-1018_a2.res  cond-eff-1018_a3.res  cond-eff-1019_a1.res  cond-eff-1019_a2.res  cond-eff-1019_a3.res  (+2609 more)
benchmarkfiles/benchmark-cost/: cost-0_a1.res  cost-1001_a1.res  cost-1002_a2.res  cost-1003_a2.res  cost-1003_a3.res  cost-1004_a1.res  cost-1005.res  cost-1005_a2.res  cost-1005_a3.res  cost-1006.res  cost-1006_a1.res  cost-1006_a2.res  cost-1007_a1.res  cost-1008_a1.res  cost-101.res  (+1838 more)
scripts/: create-jobs.py  pre-commit-clang-format  random_expression_generator.py  setup-hooks.sh
src/: .clang-format  CMakeLists.txt  InfixParser.cpp  InfixParser.h  Polynomial.cpp  Polynomial.h  catamorphism.h  combined.cpp  combined.h  conditional_effects.cpp  conditional_effects.h  cxxopts.hpp  effect_parser.cpp  effect_parser.h  eval.h  factories.h  functor_instance.h  globals.h  logical_formula.cpp  logical_formula.h  main.cpp  optimizations.h  parser.cpp  parser.h  parser_main.cpp  polynomial.cpp  polynomial.h  printer.h
src/benchmark/: CMakeLists.txt  benchmark.cpp  evmdd_create_benchmark.cpp
src/boost_dependencies/libs/: CMakeLists.txt
src/catamorph/: Catamorph.cpp  Catamorph.h  Evmdd.cpp  Evmdd.h  EvmddExpression.cpp  EvmddExpression.h  Expression.h  Factories.cpp  Factories.h  Printer.h  catamorph.cpp  catamorph.h  expression.h  factories.cpp  factories.h  printer.h
src/catamorph/interpreters/: CreateEvmdd.cpp  CreateEvmdd.h  Dependencies.cpp  Dependencies.h  Evaluate.cpp  Evaluate.h  Iverson.cpp  Iverson.h  Optimizations.cpp  Optimizations.h  create_ast.cpp  create_ast.h  create_evmdd.cpp  create_evmdd.h  dependencies.cpp  dependencies.h  evaluate.cpp  evaluate.h  iverson.cpp  iverson.h  optimizations.cpp  optimizations.h  variable_ordering.cpp  variable_ordering.h
src/evmdd/: CMakeLists.txt  Evmdd.h  EvmddCatamorph.h  Node.h  abstract_factory.h  evmdd.cpp  evmdd.h  evmdd_cache.h  evmdd_expression.cpp  evmdd_expression.h  make_pair.h  monoid.h  node.cpp  node.h  node_factory.h  node_storage.h  printer.h  product_evmdd.cpp  product_evmdd.h
src/evmdd/monoids/: boolean.cpp  boolean.h  facts.cpp  facts.h  numbers.cc  numbers.cpp  product.h  variable_assignment.cpp  variable_assignment.h
src/evmdd/operations/: absolute.h  divides.h  equal_to.h  logic_and.h  logic_not.h  logic_or.h  minus.h  multiplies.h  plus.h
src/test/: CMakeLists.txt  combined_evmdd_tests.cpp  conditional_effect_evmdd.cpp  effect_parser_test.cpp  evmdd_build_tests.cpp  expression_tests.cpp  infix_parser_tests.cpp  iverson_evmdd_tests.cpp  monoid_tests.cpp  parser_tests.cpp  polynomial_class_tests.cpp  simple_iverson_tests.cpp  simple_numeric_tests.cpp  test_main.cpp  variable_ordering_tests.cpp
src/test/evmdd/: abstract_factory_test.cpp  combined_evmdd_tests.cpp  conditional_effect_evmdd.cpp  conditional_effect_tests.cpp  iverson_evmdd_tests.cpp  product_tests.cpp
src/test/evmdd/conditional_effect/: construction_tests.cpp  evaluation_tests.cpp
src/test/evmdd/numeric/: construction_tests.cpp  construction_tests_arithmetic.cpp  construction_tests_iversion.cpp  evaluation_tests.cpp  evaluation_tests_arithmetic.cpp  evaluation_tests_iversion.cpp  evmdd_build_tests.cpp  iverson_tests.cpp
src/test/evmdd/product/: construction_tests.cpp  evaluation_tests.cpp
src/test/parser/base/: infix_parser_tests.cpp  infix_to_prefix_tests.cpp  lexer_tests.cpp  prefix_parser_tests.cpp
src/test/parser/complex/: effect_parser_test.cpp
src/utils/: math_utils.cpp  math_utils.h  string_utils.h  system_utils.cpp  system_utils.h
(+10 files in other folders)
